src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>External_Integration_Types__c</fullName>
        <inlineHelpText>Select all integration types requested/in use. Even if the client decides to proceed without the devices or systems they&apos;d like to integrate with, please indicate all that were inquired about.</inlineHelpText>
        <label>External Integration Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>External_Integration_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Including MOTECH</description>
        <label>External Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flowdown_Clauses__c</fullName>
        <description>Field to capture flow-down clauses for contracts - requested by Corporate Ops in June 2023</description>
        <inlineHelpText>Captures the key flow-down clauses that need to be passed down to subcontractors</inlineHelpText>
        <label>Flow-down Clauses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Focus_added__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Focus added?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fogbugz_Assigned_To__c</fullName>
        <inlineHelpText>Who is the Fogbugz ticket assigned to currently.</inlineHelpText>
        <label>Fogbugz Assigned To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fogbugz_Client__c</fullName>
        <description>This should Always equal &quot;Business Development&quot;. If it doesn&apos;t, you should click the Fogbugz Link and update it.</description>
        <inlineHelpText>This should Always equal &quot;Business Development&quot;. If it doesn&apos;t, you should click the Fogbugz Link and update it.</inlineHelpText>
        <label>Fogbugz Client</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fogbugz_Days_Not_Updated__c</fullName>
        <description>Today - Fogbugz Last Updated Date</description>
        <formula>TODAY() -  DATEVALUE(Fogbugz_Last_Updated_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fogbugz Days Not Updated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fogbugz_elapsed_time__c</fullName>
        <label>Fogbugz elapsed time</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fogbugz_Last_Updated_Date__c</fullName>
        <inlineHelpText>The last day the Fogbugz ticket was updated.</inlineHelpText>
        <label>Fogbugz Last Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fogbugz_Link__c</fullName>
        <description>URL link to the Fogbugz Case. If this doesn&apos;t bring you to the right case, email Lucina.</description>
        <formula>HYPERLINK(&quot;http://manage.dimagi.com/default.asp?&quot; &amp; Fogbugz_Ticket_Number__c, &quot;http://manage.dimagi.com/default.asp?&quot; &amp; Fogbugz_Ticket_Number__c , &quot;_blank&quot;)</formula>
        <inlineHelpText>URL link to the Fogbugz Case. If this doesn&apos;t bring you to the right case, email Lucina.</inlineHelpText>
        <label>Fogbugz Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fogbugz_Most_Recent_Note__c</fullName>
        <inlineHelpText>The most recent update to Fogbugz ticket.</inlineHelpText>
        <label>Fogbugz Most Recent Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fogbugz_Opened_By__c</fullName>
        <label>Fogbugz Opened By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fogbugz_Owner_Mapping__c</fullName>
        <formula>CASE( Fogbugz_Assigned_To__c , 
&quot;Gillian Javetski&quot;, &quot;Neal Lesh&quot;,
&quot;Benjamin Lightburn&quot;, &quot;Neal Lesh&quot;,
&quot;Andrea Fletcher&quot;, &quot;Andrea Fletcher&quot;,
&quot;Sheel Shah&quot;, &quot;Devika Sarin&quot;,
&quot;Mohini Bhavsar&quot;, &quot;Devika Sarin&quot;,
&quot;Krishna Swamy&quot;, &quot;Devika Sarin&quot;,
&quot;Mengji Chen&quot;, &quot;Devika Sarin&quot;,
&quot;Maxwell Izenberg&quot;, &quot;Devika Sarin&quot;,
&quot;Rishad Gambhir&quot;, &quot;Devika Sarin&quot;,
&quot;Vikram Kumar&quot;,&quot;Neal Lesh&quot;,
&quot;Rosa Akbari&quot;,&quot;Kieran Sharpey-Schafer&quot;,
&quot;Jolani de la Porte&quot;, &quot;Kieran Sharpey-Schafer&quot;,
&quot;Saijai Liangpunsakul&quot;,&quot;Devika Sarin&quot;,
&quot;Fiorenzo Conte&quot;,&quot;Kara Grijalva&quot;,
&quot;Divya Pamnani&quot;, &quot;Kieran Sharpey-Schafer&quot;,
&quot;Christina Jeffrey&quot;,&quot;Christina Jeffrey&quot;,
&quot;Michelle Sultan&quot;,&quot;Christina Jeffrey&quot;,
&quot;Vishwajit Singh&quot;, &quot;Kieran Sharpey-Schafer&quot;,
&quot;David Ramdeen&quot;, &quot;Devika Sarin&quot;,
&quot;Lily Olson&quot;, &quot;Devika Sarin&quot;,
&quot;Lauren Fox&quot;, &quot;Marco Horta&quot;,
&quot;Ryan Hartford&quot;)</formula>
        <label>Fogbugz Owner Mapping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fogbugz_Probability__c</fullName>
        <label>Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fogbugz_Ticket_Number__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>The ticket number of the corresponding Fogbugz ticket.</inlineHelpText>
        <label>Fogbugz Ticket Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funder_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The account that is supplying the money for the opportunity. i.e. USAID funds CARE who then pays us. USAID is the &quot;Funder Account&quot;, CARE is the &quot;Account&quot;.</inlineHelpText>
        <label>Funding Source</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Funding Source)</relationshipLabel>
        <relationshipName>Opportunities_Funded</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <inlineHelpText>Comments on where the funding is coming from.</inlineHelpText>
        <label>Funding Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Geographic_POD__c</fullName>
        <description>This field was requested by Solutions in February 2023 to track the subteams working on different opportunities. It was added in March 2023.</description>
        <inlineHelpText>For Solutions opportunities only: the geographic POD leading the opportunity.</inlineHelpText>
        <label>Solutions - Geographic POD</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>SEA</fullName>
                </value>
                <value>
                    <fullName>WCA</fullName>
                </value>
                <value>
                    <fullName>LAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GS_of_Non_Expense_Budget__c</fullName>
        <description>GS Services Budget / Total_Non_Expense_Income_BUDGET</description>
        <formula>Services_EV__c  /  Amount_Minus_Expense_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>GS Services Budget / Total_Non_Expense_Income_BUDGET</inlineHelpText>
        <label>% GS of Non-Expense Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GS_Resourcing_Status__c</fullName>
        <label>GS Resourcing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Request Submitted</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GS_Services_Work_12_month_EV__c</fullName>
        <description>Calculated based on Contract Dates and GS Services Budget (EV)</description>
        <formula>IF( (MONTH(CloseDate ) + 12*YEAR(CloseDate)) &gt; (Month( today()) + 12*YEAR( today()) + 12) 
|| (BLANKVALUE(Duration_months__c,0) = 0) 
|| (CloseDate &lt; today()), 
0, 
if( (12*YEAR(today())+ MONTH(today()) + 12) &gt; (12*YEAR(CloseDate)+MONTH(CloseDate)+Duration_months__c), 
Services_EV__c , 
( Services_EV__c / Duration_months__c) * (MONTH( today()) + 12*YEAR( today()) + 12 - MONTH(CloseDate) - 12*YEAR(CloseDate))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated based on Contract Dates and GS Services Budget (EV)</inlineHelpText>
        <label>GS Services Work (12 month EV)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Services_Work_18_month_EV__c</fullName>
        <description>Calculated based on Contract Dates and GS Services Budget (EV)</description>
        <formula>IF( (MONTH(CloseDate ) + 12*YEAR(CloseDate)) &gt; (Month( today()) + 12*YEAR( today()) + 18) 
|| (BLANKVALUE(Duration_months__c,0) = 0) 
|| (CloseDate &lt; today()), 
0, 
if( (12*YEAR(today())+ MONTH(today()) + 18) &gt; (12*YEAR(CloseDate)+MONTH(CloseDate)+Duration_months__c), 
Services_EV__c , 
( Services_EV__c / Duration_months__c) * (MONTH( today()) + 12*YEAR( today()) + 18 - MONTH(CloseDate) - 12*YEAR(CloseDate))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated based on Contract Dates and GS Services Budget (EV)</inlineHelpText>
        <label>GS Services Work (18 month EV)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Services_Work_24month_EV__c</fullName>
        <description>Calculated based on Contract Dates and GS Services Budget (EV)</description>
        <formula>IF( (MONTH(CloseDate ) + 12*YEAR(CloseDate)) &gt; (Month( today()) + 12*YEAR( today()) + 24) 
|| (BLANKVALUE(Duration_months__c,0) = 0) 
|| (CloseDate &lt; today()), 
0, 
if( (12*YEAR(today())+ MONTH(today()) + 24) &gt; (12*YEAR(CloseDate)+MONTH(CloseDate)+Duration_months__c), 
Services_EV__c , 
( Services_EV__c / Duration_months__c) * (MONTH( today()) + 12*YEAR( today()) + 24 - MONTH(CloseDate) - 12*YEAR(CloseDate))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated based on Contract Dates and GS Services Budget (EV)</inlineHelpText>
        <label>GS Services Work (24month EV)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Services_Work_3_month_EV__c</fullName>
        <description>Calculated based on Contract Dates and GS Services Budget (EV)</description>
        <formula>IF( (MONTH(CloseDate ) + 12*YEAR(CloseDate)) &gt; (Month( today()) + 12*YEAR( today()) + 3) 
|| (BLANKVALUE(Duration_months__c,0) = 0) 
|| (CloseDate &lt; today()), 
0, 
if( (12*YEAR(today())+ MONTH(today()) + 3) &gt; (12*YEAR(CloseDate)+MONTH(CloseDate)+Duration_months__c), 
 Services_EV__c  , 
(  Services_EV__c  / Duration_months__c) * (MONTH( today()) + 12*YEAR( today()) + 3 - MONTH(CloseDate) - 12*YEAR(CloseDate))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated based on Contract Dates and GS Services Budget (EV)</inlineHelpText>
        <label>GS Services Work (3 month EV)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Has_SMS_Component__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has SMS Component</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HIPAA_Assurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HIPAA Assurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_are_partners_hearing_about_us__c</fullName>
        <label>How are partners hearing about us?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ignore_below_field__c</fullName>
        <formula>&apos;Please ignore the Probability(%) field below and use the Probability field at the top of this page.&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ignore below field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Potentially interested in Implementation Services</description>
        <inlineHelpText>Potentially interested in Implementation Services</inlineHelpText>
        <label>Implementation Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <label>Implementation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bundles and Services</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Self Service</fullName>
                </value>
                <value>
                    <fullName>Managed server</fullName>
                </value>
                <value>
                    <fullName>EMM</fullName>
                </value>
                <value>
                    <fullName>Chatbot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implementing_Business_Unit__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Dimagi BU that will manage the execution of the project.</inlineHelpText>
        <label>Execution Owner (BU)</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Opportunities (Execution)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incumbent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incumbent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Incumbent)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Mobile Money</fullName>
                </value>
                <value>
                    <fullName>Nutrition</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Telecom</fullName>
                </value>
                <value>
                    <fullName>Water &amp; Sanitation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interdivision_Expense_Income__c</fullName>
        <description>The Expense Income that is passed through to another Division as part of an Interdivision Subcontract</description>
        <inlineHelpText>The Expense Income that is passed through to another Division as part of an Interdivision Subcontract</inlineHelpText>
        <label>Interdivision Expense Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interdivision_Subcontract_Opp_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interdivision Subcontract Opp 1</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interdivision_Subcontract_Opp_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interdivision Subcontract Opp 2</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Interdivision Subcontract Opp 2)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interdivision_Subcontract__c</fullName>
        <label>Interdivision Subcontract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>In_kind_Amount__c</fullName>
        <label>In-kind Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Fast_Track__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the opportunity is bypassing the standard sales process.</description>
        <inlineHelpText>Check this box if the opportunity is bypassing the standard sales process.</inlineHelpText>
        <label>Is Fast-Track?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Contractual_Clauses_for_SaaS__c</fullName>
        <description>Requested by Corporate Operations in April 2023. Intended as a place where Corporate Operations can document the details of clauses that deviate from Dimagi Terms.</description>
        <inlineHelpText>If the contract has clauses that deviate from our Dimagi Terms, the details are populated here by Corporate Ops</inlineHelpText>
        <label>Key Contractual Clauses for SaaS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_chatter_post_date_time__c</fullName>
        <label>Last chatter post date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_day_Opp_failed_sales_process__c</fullName>
        <label>Latest day Opp failed sales process</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Ever_Responded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Ever Responded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_first_call_held__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead first call held</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_follow_up_calls_held__c</fullName>
        <label>Lead follow up calls held</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Status_Reason__c</fullName>
        <label>Lead Status Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort_Description__c</fullName>
        <description>Describe the reason for the Level of Effort you chose in 255 characters or less.</description>
        <label>Level of Effort (LOE) - Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <description>This is the estimated level of effort for the RFP. It is a combination of number of hours, quantity of new content, and quality of the proposal.  E.g. a large, strategic consortium RFP with a big technical compoment would be &quot;High&quot;.  An RFP wired for us that just needs the default proposal template and some Past Performance Reports would be &quot;Low&quot;. Use the description field as well to clarify.</description>
        <label>Level of Effort (LOE)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>long_wait__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>These won&apos;t be marked red on the Biz Dev reports.</inlineHelpText>
        <label>Don&apos;t turn this red.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Major_Subcontractor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Only use this if you are priming an award and have 1 major subcontractor</description>
        <label>Major Subcontractor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Major Subcontractor)</relationshipLabel>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Revenue_MRR__c</fullName>
        <description>Amount divided by Duration (months). The Amount of monthly recurring product revenue (absolute amount). MRR is only calculated for Implementation Type = Self Service, Enterprise or Managed Server.</description>
        <formula>IF ( OR(ISPICKVAL(Implementation_Type__c, &quot;Self Service&quot; ),ISPICKVAL(Implementation_Type__c, &quot;Enterprise&quot; ),ISPICKVAL(Implementation_Type__c, &quot;Managed Server&quot; )),
          IF ( OR ( ISBLANK ( Amount ), ISBLANK ( Duration_months__c ) ),
               NULL,
               Amount / Duration_months__c
             ),
          NULL
        )</formula>
        <inlineHelpText>Amount divided by Duration (months). The Amount of monthly recurring product revenue (absolute amount). MRR is only calculated for Implementation Type = Self Service, Enterprise or Managed Server.</inlineHelpText>
        <label>Monthly Recurring Revenue (MRR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nb_times_Opp_failed_sales_process__c</fullName>
        <label>Nb times Opp failed sales process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Standard_SaaS_Clauses__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requested by Corporate Operations in April 2023.
Intended to capture if the contact has clauses which deviate from Dimagi Terms</description>
        <inlineHelpText>Indicates if the contract has clauses that deviate from our Dimagi Terms. Populated by Corporate Ops</inlineHelpText>
        <label>Non-Standard SaaS Clauses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_qualified_notes__c</fullName>
        <description>Enter notes about why the opp was not qualified.</description>
        <inlineHelpText>Enter notes about why the opp was not qualified.</inlineHelpText>
        <label>Not qualified - notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Not_Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this if the opp is not qualified and enter notes.</description>
        <inlineHelpText>Check this if the opp is not qualified and enter notes.</inlineHelpText>
        <label>Not Qualified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Users__c</fullName>
        <description>The expected number of Mobile users for the project opportunity.</description>
        <inlineHelpText>The expected number of Mobile users for the project opportunity.</inlineHelpText>
        <label>Number of Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Expiration__c</fullName>
        <description>Date of offer expiration.</description>
        <inlineHelpText>Date of offer expiration.</inlineHelpText>
        <label>Offer Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Given_Notes__c</fullName>
        <description>Notes on any offers given.</description>
        <inlineHelpText>Notes on any offers given.</inlineHelpText>
        <label>Offer Given - Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Given__c</fullName>
        <description>Offer given.</description>
        <inlineHelpText>Offer given.</inlineHelpText>
        <label>Offer Given</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One month free</fullName>
                </value>
                <value>
                    <fullName>Onboarding - 1hr (Pro)</fullName>
                </value>
                <value>
                    <fullName>Onboarding - 2hr (Advanced)</fullName>
                </value>
                <value>
                    <fullName>Onboarding - 4hr (Enterprise)</fullName>
                </value>
                <value>
                    <fullName>Extend Trial</fullName>
                </value>
                <value>
                    <fullName>Report builder trial</fullName>
                </value>
                <value>
                    <fullName>Two months free</fullName>
                </value>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Execution_budget_for_GS__c</fullName>
        <defaultValue>1</defaultValue>
        <description>This is the % of the remaining budget (after removing expenses and buffer %) that is planned for GS work</description>
        <inlineHelpText>This is the % of the remaining budget (after removing expenses and buffer %) that is planned for GS work</inlineHelpText>
        <label>% of Services budget for GS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onboarding_package_revenue__c</fullName>
        <description>If any, price of the onboarding package sold to the customer  (NB: an onboarding package is a Customer Success package sold to our Self-starters and executed by the CS team)</description>
        <inlineHelpText>If any, price of the onboarding package sold to the customer (NB: an onboarding package is a Customer Success package sold to our Self-starters and executed by the CS team)</inlineHelpText>
        <label>Onboarding package revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Onboarding_package_sold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check that box if you sold an onboarding package (For our self-service customers / executed by our Customer Success team) to that customer</description>
        <inlineHelpText>Check that box if you sold an onboarding package (For our self-service customers / executed by our Customer Success team) to that customer</inlineHelpText>
        <label>Onboarding package sold?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onboarding_Survey_filled_in__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check that box once you have filled-in the survey on onboarding packages. Please fill in that survey for every self-starter opportunity closed-won (even if you did not sell an onboarding package): 
https://docs.google.com/spreadsheets/d/1Ar4TvLt0GJ3-eH8rga-Zb1QmG9H66_2Rcs_NSZAgNFE/edit#gid=0</description>
        <inlineHelpText>Check that box once you have filled-in that survey on onboarding packages: https://docs.google.com/spreadsheets/d/1Ar4TvLt0GJ3-eH8rga-Zb1QmG9H66_2Rcs_NSZAgNFE/edit#gid=0</inlineHelpText>
        <label>Onboarding survey filled-in?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onboarding_Team_running_it__c</fullName>
        <description>Please select GS if the GS team is going to run the Onboarding on behalf of our CS team due to capacity reasons. Otherwise leave CS</description>
        <inlineHelpText>Please select GS if the GS team is going to run the Onboarding on behalf of our CS team due to capacity reasons. Otherwise leave CS</inlineHelpText>
        <label>Onboarding - Team running it</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Success</fullName>
                    <default>true</default>
                    <label>Customer Success</label>
                </value>
                <value>
                    <fullName>GS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onsite_Time_Required__c</fullName>
        <inlineHelpText>The onsite time required and when</inlineHelpText>
        <label>Onsite Time Required</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_counter__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Division__c</fullName>
        <description>This fields describes which division is driving the BD efforts related to this opportunity.</description>
        <inlineHelpText>This fields describes which division is driving the BD efforts related to this opportunity.</inlineHelpText>
        <label>Opportunity Owner (Division)</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Solutions</fullName>
                </value>
                <value>
                    <fullName>SaaS</fullName>
                </value>
                <value>
                    <fullName>GSO</fullName>
                </value>
                <value>
                    <fullName>GTD</fullName>
                </value>
                <value>
                    <fullName>India Division</fullName>
                </value>
                <value>
                    <fullName>USH</fullName>
                </value>
                <value>
                    <fullName>ICDS-CAS</fullName>
                    <isActive>false</isActive>
                    <label>ICDS-CAS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Name__c</fullName>
        <label>Opportunity Owner Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>